<resources>
    <string name="app_name">OHDM Offline Viewer</string>
    <string name="OHDM">Open Historical Data Map</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tmp">TmpActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Home_Usage">To view your own maps, simply move them to your mobile phone in the "OHDM" folder.
        Otherwise, you can view and download available maps in the "Maps" tab.</string>

    <string name="About_Text">.. stores annual Open Street Map (OSM) maps.
        This makes it the first system that can process historical maps.
        OHDM was founded in 2016 under the leadership of Prof. Schwotzer at the Hochschule für Technik und Wirtschaft in Berlin.
        Since then, numerous final theses and Open Source projects have been created on an OHDM basis.
    </string>

    <string name="About_APP">
        .. was developed in 2019 by students during a course by Mr. Schwotzer. It shall serve as a prototype to display maps stored in OHDM for the first time.
    </string>
    <string name="map_reqeust_description">Request map with specific values. Enter the coordinates and a date and the map will be generated</string>
    <string name="x1">x1</string>
    <string name="x2">x2</string>
    <string name="y1">y1</string>
    <string name="y2">y2</string>
    <string name="x3">x3</string>
    <string name="y3">y3</string>
    <string name="y4">y4</string>
    <string name="date_e_g_2016_12_31">date e.g. 2016-12-31</string>
    <string name="name_e_g_berlin_city_2017_01_01">name e.g. berlin-city-2017-01-01</string>
    <string name="x4">x4</string>

</resources>
