<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MapDownloadActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/map_reqeust_description"
            android:textSize="18sp"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TextCordx1"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/x1"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordy1"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/y1"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordx2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/x2"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordy2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/y2"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/TextCordx3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/x3"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordy3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/y3"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordx4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/x4"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:autofillHints="" />

            <EditText
                android:id="@+id/TextCordy4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/y4"
                android:inputType="numberSigned"
                android:selectAllOnFocus="true"
                android:autofillHints="" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_e_g_2016_12_31"
            android:inputType="date"
            android:autofillHints="" />

        <EditText
            android:id="@+id/TextMapname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_e_g_berlin_city_2017_01_01"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <Button
            android:id="@+id/buttonRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_send" />

        <TextView
            android:id="@+id/textViewResponse"
            android:layout_width="match_parent"
            android:layout_height="302dp" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation_bar"
        android:background="?android:attr/windowBackground"/>

</RelativeLayout>